[gd_scene load_steps=14 format=3 uid="uid://cmqmsbr11cdeb"]

[ext_resource type="Script" path="res://UI/UnitDetails.gd" id="1_28edc"]
[ext_resource type="PackedScene" uid="uid://dmn414tgvv43c" path="res://UI/UnitControl.tscn" id="3_bbnrl"]
[ext_resource type="FontFile" uid="uid://j71bxuhfo0u7" path="res://Assets/Fonts/data-latin.ttf" id="3_vb625"]
[ext_resource type="Script" path="res://UI/ScheduleControl.gd" id="4_kagw4"]
[ext_resource type="Script" path="res://UI/GamePanel.gd" id="4_n7wx1"]
[ext_resource type="Script" path="res://UI/DisplayTooltip.gd" id="5_fa22v"]
[ext_resource type="Script" path="res://Engine/Schedule.gd" id="5_nvo3b"]
[ext_resource type="Script" path="res://Engine/SchedulePointer.gd" id="6_474vy"]
[ext_resource type="PackedScene" uid="uid://btopitt5e6n1" path="res://UI/Tiers.tscn" id="8_a2tjr"]

[sub_resource type="Resource" id="Resource_5a4ff"]
script = ExtResource("5_nvo3b")
data = Array[bool]([true, false, false, false, true, true, false, false])
kind = 0

[sub_resource type="Resource" id="Resource_6gd66"]
script = ExtResource("6_474vy")
battle_round = 0
phase = 0
active = false

[sub_resource type="Resource" id="Resource_qajkl"]
script = ExtResource("5_nvo3b")
data = Array[bool]([false, true, false])
kind = 1

[sub_resource type="Resource" id="Resource_8tta6"]
script = ExtResource("5_nvo3b")
data = Array[bool]([false, true, false])
kind = 2

[node name="BattleUnitDetails" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_28edc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.901961)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_right = -464.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 2
mouse_filter = 2

[node name="UnitControl" parent="CenterContainer/Control" instance=ExtResource("3_bbnrl")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 128.0
offset_bottom = 192.0
scale = Vector2(3.125, 3.125)
mouse_filter = 2
details_tooltips_enabled = true

[node name="GamePanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 688.0
offset_top = -8.0
offset_right = 1088.0
offset_bottom = 656.0
mouse_filter = 2
script = ExtResource("4_n7wx1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 688.0
offset_right = 1088.0
offset_bottom = 648.0

[node name="Control" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 24.0
offset_right = 1072.0
offset_bottom = 641.0
mouse_filter = 2
metadata/_edit_group_ = true

[node name="Schedules" type="Control" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2
mouse_filter = 2

[node name="Schedules" type="GridContainer" parent="Control/Schedules"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -196.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 0
metadata/_edit_group_ = true

[node name="ScheduleControl" type="Control" parent="Control/Schedules/Schedules"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("4_kagw4")
schedule = SubResource("Resource_5a4ff")
schedule_pointer = SubResource("Resource_6gd66")

[node name="ScheduleControl2" type="Control" parent="Control/Schedules/Schedules"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("4_kagw4")
schedule = SubResource("Resource_qajkl")
schedule_pointer = SubResource("Resource_6gd66")

[node name="ScheduleControl3" type="Control" parent="Control/Schedules/Schedules"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("4_kagw4")
schedule = SubResource("Resource_8tta6")
schedule_pointer = SubResource("Resource_6gd66")

[node name="DisplayTooltip" type="Node" parent="Control/Schedules/Schedules"]
script = ExtResource("5_fa22v")
side = 0
text = "SCHEDULE"

[node name="Tiers" parent="Control/Schedules" instance=ExtResource("8_a2tjr")]
layout_mode = 1
offset_right = -352.0
offset_bottom = 0.0
mouse_filter = 2
font_size = 16

[node name="SchedulesUnderline" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="EmpoweredName" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.25098, 1)
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 28
text = "POWER LEVEL"

[node name="DisplayTooltip" type="Node" parent="Control/EmpoweredName"]
script = ExtResource("5_fa22v")
side = 0
text = "EACH LEVEL GRANTS +10% DAMAGE AND DEFENSE"

[node name="EmpoweredCounter" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 20
text = "1"
horizontal_alignment = 2
autowrap_mode = 2

[node name="EmpoweredUnderline" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="Tags" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.25098, 1)
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 28
text = "Tags"

[node name="TagsContent" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 20
text = "TAGS CONTENT"
horizontal_alignment = 2
autowrap_mode = 2

[node name="TagsUnderline" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="Damage" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.25, 0.25, 1)
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 28
text = "DAMAGE
"

[node name="DamageValue" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 20
text = "10"
horizontal_alignment = 2
autowrap_mode = 2

[node name="DamageUnderline" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="DamagePerRound" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.25, 0.25, 1)
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 28
text = "DAMAGE PER ROUND"

[node name="DamagePerRoundValue" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 20
text = "10"
horizontal_alignment = 2
autowrap_mode = 2

[node name="DamagePerRoundUnderline" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="Defense" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.25098, 0.501961, 0.25098, 1)
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 28
text = "DEFENSE"

[node name="DefenseValue" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 20
text = "10"
horizontal_alignment = 2
autowrap_mode = 2

[node name="DefenseUnderline" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="DefensePerRound" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.25098, 0.501961, 0.25098, 1)
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 28
text = "DEFENSE PER ROUND"

[node name="DefensePerRoundValue" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 20
text = "10"
horizontal_alignment = 2
autowrap_mode = 2

[node name="DefensePerRoundUnderline" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="PassiveName" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.25, 0.25, 0.5, 1)
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 28
text = "Passive Name"

[node name="PassiveDescription" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 20
text = "Passive
"
autowrap_mode = 2

[node name="PassiveUnderline" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="SkillName" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.25, 0.25, 0.5, 1)
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 28
text = "Skill Name"

[node name="SkillDescription" type="Label" parent="Control"]
custom_minimum_size = Vector2(368, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vb625")
theme_override_font_sizes/font_size = 20
text = "Skill
"
autowrap_mode = 2

[node name="SkillUnderline" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)
